Refactor verification form: remove testimonials section, update file input handling, and enhance image positioning functionality

--- a/verification_form.html
+++ b/verification_form.html
@@ -24,14 +24,6 @@
                     </div>
                     <div class="logo-text">Secure<span>ID</span> Verify</div>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#how-it-works">How It Works</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
                 <button class="back-button" onclick="window.location.href='index.html'">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -100,9 +92,9 @@
                     <div class="verification-card">
                         <h2 class="card-title">Verify Your Academic ID</h2>
 
-                        <!-- Webcam View -->
-                        <div class="webcam-container">
-                            <div class="webcam-view">
+                        <!-- Image positioning View -->
+                        <!-- <div class="image-positioning-container">
+                            <div class="image-positioning-view">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="none"
                                     viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" style="color: var(--gray);">
@@ -111,7 +103,7 @@
                                     <line x1="12" y1="17" x2="12" y2="21" />
                                 </svg>
 
-                                <div class="webcam-overlay">
+                                <div class="image-positioning-overlay">
                                     <div class="id-frame">
                                         <span class="frame-label">Position ID Here</span>
                                         <div class="corner-markers top-left"></div>
@@ -121,14 +113,14 @@
                                     </div>
                                 </div>
 
-                                <div class="webcam-instructions">
+                                <div class="image-positioning-instructions">
                                     Position your ID card within the frame
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Webcam Controls -->
-                        <div class="webcam-controls">
+                        <!-- image-positioning Controls -->
+                        <div class="image-positioning-controls">
                             <button class="control-button primary-button" onclick="triggerFileSelect()">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
                                     viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round"
