--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                     <ul>
                         <li><a href="#features">Features</a></li>
                         <li><a href="#how-it-works">How It Works</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#footer">Contact</a></li>
                     </ul>
                 </nav>
@@ -51,6 +50,10 @@
                     <div class="hero-image-container">
                         <div class="pattern"></div>
                         <div class="mock-id-card">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="98" height="9x8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" style="display: block; margin: 0 auto; position: relative; z-index: 2;">
+                                <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2" fill="none"/>
+                                <line x1="16.5" y1="16.5" x2="21" y2="21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
                             <div class="scan-line"></div>
                         </div>
                     </div>
@@ -160,37 +163,6 @@
         </div>
     </section>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials" id="testimonials">
-        <div class="container">
-            <h2 class="section-title">Trusted by Academic Institutions</h2>
-            <div class="testimonials-container">
-                <div class="testimonial-card">
-                    <p class="testimonial-text">"SecureID Verify has streamlined our student registration process tremendously. The verification is fast, accurate, and has significantly reduced our administrative workload."</p>
-                    <div class="testimonial-author">
-                        <div class="testimonial-avatar">JP</div>
-                        <div>
-                            <div class="testimonial-name">Dr. James Peterson</div>
-                            <div class="testimonial-position">Satisfied Faculty</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonials-container">
-                <div class="testimonial-card">
-                    <p class="testimonial-text">"Verified my ID in seconds. The platform is user-friendly and the results are accurate. Highly recommended!"</p>
-                    <div class="testimonial-author">
-                        <div class="testimonial-avatar">JP</div>
-                        <div>
-                            <div class="testimonial-name">John Doe</div>
-                            <div class="testimonial-position">Satisfied Student</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- CTA Section -->
     <section class="cta-section" id="contact">
         <div class="container">
@@ -218,7 +190,11 @@
                     <div class="social-links">
                         <a href="#" class="social-link">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: white;">
-                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+                                <line x1="16" y1="11" x2="16" y2="16"/>
+                                <line x1="12" y1="11" x2="12" y2="16"/>
+                                <line x1="8" y1="11" x2="8" y2="16"/>
+                                <line x1="8" y1="8" x2="8" y2="8"/>
                             </svg>
                         </a>
                         <a href="#" class="social-link">
@@ -233,14 +209,13 @@
                     <ul class="footer-links">
                         <li><a href="#features">Features</a></li>
                         <li><a href="#how-it-works">How It Works</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#footer">Contact</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="footer-title">Contact Us</h3>
-                    <p class="footer-contact">Email: support@secureidverify.com</p>
-                    <p class="footer-contact">Phone: +1 (123) 456-7890</p>
+                    <p class="footer-contact">Email: ombajpai@gmail.com</p>
+                    <p class="footer-contact">Phone: +91 8090930025</p>
                 </div>
             </div>
             <div class="footer-bottom">
