Update branding and logo references across HTML and CSS files

--- a/failed.html
+++ b/failed.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SecureID Verify - Verification Failed</title>
+  <title>Mask it - Verification Failed</title>
   <link rel="stylesheet" href="styles/failed.css">
 </head>
 <body>
 
   <main class="container" role="main" aria-labelledby="failureTitle">
-    <div class="logo" aria-label="SecureID Verify logo">SecureID Verify</div>
+    <div class="logo" aria-label="SecureID Verify logo">Mask it Verify</div>
 
     <div class="fail-icon" aria-hidden="true">
       <svg viewBox="0 0 24 24" >
