--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecureID Verify - Academic ID Verification Service</title>
+    <title>Mask it - ID Verification Service</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
@@ -13,11 +13,8 @@
             <div class="header-content">
                 <div class="logo">
                     <div class="logo-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: white;">
-                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-                        </svg>
+                        <img src="assets/logo1.png" alt="Logo">
                     </div>
-                    <div class="logo-text">Secure<span>ID</span> Verify</div>
                 </div>
                 <nav>
                     <ul>
@@ -178,14 +175,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div>
-                    <div class="footer-logo">
-                        <div class="footer-logo-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: white;">
-                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-                            </svg>
-                        </div>
-                        <div class="footer-logo-text">Secure<span>ID</span> Verify</div>
-                    </div>
+            
                     <p class="footer-description">Advanced ID verification for academic institutions. Streamline your verification process with our AI-powered platform.</p>
                     <div class="social-links">
                         <a href="#" class="social-link">
@@ -219,7 +209,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="footer-copyright">© 2024 SecureID Verify. All rights reserved.</p>
+                <p class="footer-copyright">© 2024 Mask it. All rights reserved.</p>
             </div>
         </div>
     </footer>
