--- a/success.html
+++ b/success.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SecureID Verify - Verification Success</title>
+    <title>Mask it - Verification Success</title>
     <link rel="stylesheet" href="styles/success.css">
 </head>
 
 <body>
     <main class="container" role="main" aria-labelledby="successTitle">
-        <div class="logo" aria-label="SecureID Verify logo">SecureID Verify</div>
+        <div class="logo" aria-label="SecureID Verify logo">Mask it Verify</div>
 
         <div class="checkmark" aria-hidden="true">
             <svg viewBox="0 0 24 24">
