--- a/verification_form.html
+++ b/verification_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecureID Verify - ID Verification Process</title>
+    <title>Mask it - ID Verification Process</title>
     <link rel="stylesheet" href="styles/verification_form.css">
     <script src="scripts/verification_form.js"></script>
 </head>
@@ -16,13 +16,8 @@
             <div class="header-content">
                 <div class="logo">
                     <div class="logo-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            style="color: white;">
-                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-                        </svg>
+                        <img src="assets/logo1.png" alt="Logo">
                     </div>
-                    <div class="logo-text">Secure<span>ID</span> Verify</div>
                 </div>
                 <button class="back-button" onclick="window.location.href='index.html'">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24"
@@ -39,7 +34,7 @@
     <main class="main-content">
         <div class="container">
             <h1 class="page-title">ID Verification</h1>
-            <p class="page-subtitle">Securely verify your academic ID card in just a few seconds.</p>
+            <p class="page-subtitle">Securely verify your Personal ID card in just a few seconds.</p>
 
             <!-- Verification Process -->
             <div class="verification-process">
@@ -168,13 +163,13 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About Us</h3>
-                    <p>SecureID Verify is a cutting-edge ID verification platform that streamlines the verification
+                    <p>Mask it is a cutting-edge ID verification platform that streamlines the verification
                         process for academic institutions.</p>
                 </div>
 
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 SecureID Verify. All rights reserved.</p>
+                <p>&copy; 2024 Mask it. All rights reserved.</p>
             </div>
         </div>
     </footer>
