Update card title in verification form to be more concise

--- a/verification_form.html
+++ b/verification_form.html
@@ -85,7 +85,7 @@
 
                 <div class="verification-container">
                     <div class="verification-card">
-                        <h2 class="card-title">Verify Your Academic ID</h2>
+                        <h2 class="card-title">Verify Your ID</h2>
 
                         <!-- Image positioning View -->
                         <!-- <div class="image-positioning-container">
